2010-06-12  Dean Jackson  <dino@apple.com>

Reviewed by Darin Adler.

        Animation keyframe timing functions are applying incorrectly
        https://bugs.webkit.org/show_bug.cgi?id=38963

        When copying RenderStyles, we have to clone the AnimationList so that each keyframe
        can have its own timing function.

        Tests: animations/keyframe-timing-functions-transform.html
               animations/keyframe-timing-functions2.html

        * platform/animation/Animation.h:
        (WebCore::Animation::create):
        * platform/animation/AnimationList.cpp:
        (WebCore::AnimationList::AnimationList):
        * platform/animation/AnimationList.h:
        (WebCore::AnimationList::AnimationList):

Canonical link: https://commits.webkit.org/52081@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@61068 268f45cc-cd09-0410-ab3c-d52691b4dbfc