WebCore/platform/animation/AnimationList.cpp
@@ -31,6 +31,12 @@ if (i < size() && i != 0) { \
         animation(i)->propSet(animation(j)->propGet()); \
 }
 
+AnimationList::AnimationList(const AnimationList& o)
+{
+    for (size_t i = 0; i < o.size(); ++i)
+        m_animations.append(Animation::create(o.animation(i)));
+}
+
 void AnimationList::fillUnsetProperties()
 {
     size_t i;
